--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "babel-loader": "^8.2.2",
     "boxen": "^5.0.0",
     "chalk": "^4.1.0",
+    "cli-spinners": "^2.5.0",
     "node-http-proxy": "^0.2.3",
     "nodemon": "^2.0.7",
     "open": "^7.3.1",
+    "ora": "^5.2.0",
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
