--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "chalk": "^4.1.0",
     "cli-spinners": "^2.5.0",
     "node-http-proxy": "^0.2.3",
+    "node-ipc": "^9.1.3",
     "nodemon": "^2.0.7",
     "open": "^7.3.1",
     "ora": "^5.2.0",
