--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint lib",
+    "lint:fix": "eslint --fix lib",
     "build": "webpack -c webpack.prod.js",
     "build:dev": "webpack -c webpack.dev.js",
     "build:run": "yarn build:dev && yarn start",
@@ -34,16 +36,23 @@
     "url": "https://github.com/MajorAchilles/hono/issues"
   },
   "homepage": "https://github.com/MajorAchilles/hono#readme",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-amlan": "^1.0.0",
+    "eslint-plugin-import": "^2.22.1"
+  },
+  "dependencies": {
     "boxen": "^5.0.0",
     "chalk": "^4.1.0",
     "cli-spinners": "^2.5.0",
+    "http-proxy": "^1.18.1",
     "node-http-proxy": "^0.2.3",
     "node-ipc": "^9.1.3",
     "nodemon": "^2.0.7",
