--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "nodemon": "^2.0.7",
     "open": "^7.3.1",
     "ora": "^5.2.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
